testing/errors/test_function_not_found.txts
IMPORT lib
CALL lib.nonexistent
